@@ -1,3 +1,5 @@
+    CHANGED: disabled krarc ioslave because of bug 280939 resulting in data loss.
+
     FIXED: loading defaults on the Panel page in Konfigurator has no effect
     FIXED: changes to "Show new/close tab buttons" don't take effect immediately
     FIXED: when options requiring a gui restart are changed, the panel history is lost
